CmCapture/include/CmCapture.h

/** @addtogroup 回调函数
*@{
*/
/**视频预览回调
*@param src 内存数据内容为当前视频图像
*@param width 图像宽度
*@param height 图像高度
*@param size bpp编码位数（24为真彩色）
*/
typedef bool (CALLBACK * callBackPreviewImage)(byte * src,long width,long height,long size);
 

/**设备热插拔回调
*@param deviceChangeType 
*/
typedef bool (CALLBACK * callBackDevChange)(CAMSDK_DEVCHANGE deviceChangeType);
/**获取外接按键回调函数
*@param lData值的意义1为按下2为抬起
*/
typedef bool (CALLBACK * callBackKeyRecept)(long lData);
/** @addtogroup SDK基本操作
*@{
*/
/**初始化
*加载DLL,同时记录当前是否有授权设备
*@prarm [无]
*@return
	@ref ERR_NONE 初始化成功
	@ref ERR_NOLICENSE 没有授权
*@note 初始化成功后，退出须反初始化
*/
CAMSDK_API long camInitCameraLib();
/**反初始化
*@prarm [无]
*@return
	@ref ERR_NONE 反初始化成功
*/
CAMSDK_API long camUnInitCameraLib();
/** @addtogroup 获取设备信息
*@{
*/
/**@brief 获取摄像头个数
*
*@param [out] count 设备个数
*@return
*	- @ref ERR_NONE 成功
*@note 设备排序方式 优先 主摄像  其次副摄像头  再次 凭证摄像头 最后其他
*@pre  先执行@ref camInitCameraLib
*/
CAMSDK_API long camGetDevCount(long & count);
/**@brief 获取设备类型
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [out] type 设备类型 0:主头 1:副头  2:凭证摄像头 99:其他
*@return
*	- @ref ERR_NONE 成功
*	- @ref ERR_OUTOFBOUNDS 查询不存在设备ID
*	- @ref ERR_NULLPOINT 设备信息是空
*@note 
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camGetDevType(long devIndex ,long & type);
 

/**@brief 获取设备名
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@return
*	- 摄像头在设备管理器中的名称
*@note 
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API char * camGetDevName(long devIndex );
/**@brief 获取设备VID
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [out] strvid 设备VID字符串
*@return
*	- @ref ERR_NONE 成功
*@note 
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camGetDevVid(long devIndex ,char * strvid);
/**@brief 获取设备PID
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [out] strpid 设备PID字符串
*@return
*	- @ref ERR_NONE 成功
*@note 
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camGetDevPid(long devIndex ,char * strpid);
/**@brief 获取分辨率个数
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [in] subtype 媒体格式ID，0号开始
*@param [out] count 获得指定设备指定格式支持的分辨率个数
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre @ref camInitCameraLib @ref camOpenDev
*@attention
*/
CAMSDK_API long camGetResolutionCount(long devIndex ,long subtype ,long & count);
/**@brief 获取指定分辨率
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [in] subtype 媒体格式ID，0号开始
*@param [in] index 分辨率ID，0号开始
*@param [out] width 获得指定设备指定格式指定序号的分辨率的宽
*@param [out] height 获得指定设备指定格式指定序号的分辨率的高
*@return
*	- @ref ERR_NONE 成功
*	- @ref ERR_OUTOFBOUNDS 查询不存在设备ID
*@note 
*@pre  @ref camInitCameraLib @ref camOpenDev
*@attention
*/
CAMSDK_API long camGetResolution(long devIndex ,long subtype,long index,long & width,long & height);
/**@brief 播放中视频切换分辨率
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [in] width 指定分辨率的宽
*@param [in] height 指定分辨率的高
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre  @ref camInitCameraLib @ref camOpenDev
*@attention
*/
CAMSDK_API long camSetResolution(long devIndex,long width,long height);
/**@brief 获取视频格式个数
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [out] count 该设备支持的视频格式个数
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre  @ref camInitCameraLib @ref camOpenDev
*@attention
*/
CAMSDK_API long camGetMediaTypeCount(long devIndex ,long & count);
/**@brief 获取视频格式名称
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [in] index 媒体格式ID，0号开始
*@return
	媒体格式名称，例如：MJPEG，YUY2。
*@note 
*@pre @ref camInitCameraLib @ref camOpenDev
*@attention
*/
CAMSDK_API char * camGetMediaTypeName(long devIndex  ,long index);
/**@brief 设置视频格式
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [in] subtypeIndex 媒体格式ID，0号开始
*@return
	- @ref ERR_NONE 成功
	- @ref ERR_OUTOFBOUNDS 不存在的设备ID
*@note 
*@pre @ref camInitCameraLib @ref camOpenDev
*@attention
*/
CAMSDK_API long camSetMediaType(long devIndex  ,long subtypeIndex);
/**@brief 打开视频设备
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [in] subtype 媒体格式ID，不同设备支持的格式可能不同，
					 常见0：mjpeg，1：yuy2，不支持mjpeg的设备则 0：yuy2。
					 可通过@ref camGetMediaTypeCount ，@ref camGetMediaTypeName 查询
*@param [in] width 指定分辨率宽，可以为0，设备不支持该分辨率时，默认以最大分辨开启视频
*@param [in] height 指定分辨率高，可以为0，设备不支持该分辨率时，默认以最大分辨开启视频
*@return
	- @ref ERR_NONE 成功
	- @ref ERR_OUTOFBOUNDS 不存在的设备ID
	- @ref ERR_OPENDEVFAILD 打开摄像头失败
	- @ref ERR_STARTVIDEOFAILD 播放摄像头失败
*@note 
*@pre @ref camInitCameraLib
*@attention
*/
//mediaType 默认通过配置文件 默认最大分辨率
CAMSDK_API 	long camOpenDev(long devIndex ,long subtype,long width,long height);
/**@brief 关闭视频设备
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camCloseDev(long devIndex);
/**@brief 注册热插拔消息回调（旧）
*
*@param [in] fun 热插拔回调函数 @ref callBackDevChange
*@return
	- @ref ERR_NONE 成功
	- @ref ERR_OUTOFBOUNDS 不存在的设备ID
*@note 每次初始化后注册一次即可。
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camRegOutCallBackDeviceChange(callBackDevChange fun);
/**@brief 注册视频图像回调（旧）
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [in] fun 视频图像回调函数 @ref callBackPreviewImage
*@return
	- @ref ERR_NONE 成功
	- @ref ERR_OUTOFBOUNDS 不存在的设备ID
*@note 
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camRegOutCallBackGetPreviewImage(long devIndex,callBackPreviewImage fun);
/**@brief 一键对焦自动对焦 
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [in] type 0表示一键对焦，1表示自动对焦
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre @ref camInitCameraLib @ref camOpenDev
*/
CAMSDK_API long camAutoFocus(long devIndex,long type);
/**@brief 拍照 
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [in] filePath 生成的照片的全路径。支持jpg、bmp、png、pdf。
	    [out] filePath 返回实际照片文件全路径，多图裁切时返回以分号为分隔符的多个全路径.		
*@return
	- @ref ERR_NONE 成功
*@note 拍摄图像到文件，开启条码命名，身份证命名，多图裁切等功能时，实际照片文件名与输入的文件名会不同。
*@pre @ref camInitCameraLib @ref camOpenDev
*@attention filePath 是一个可写的变量，且长度应满足应用要求。例如，满足多图裁切，最多裁切n张，则filepath的长度为n*最大路径长度。
*/
CAMSDK_API long camCaptureImageFile(long devIndex ,char * filePath);
/**@brief 自动裁切 
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [in] CropType 0不裁切，1单图裁切，2多图裁切，3单图裁切 & 补边
*@return 
	- @ref ERR_NONE 成功
*@note 设置自动裁切，可以开启视频之前设置，视频会显示绿框，框住裁切内容。
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camSetImageAutoCrop(long devIndex ,long CropType);
 

/**@brief 设置视频旋转方向
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [in] rotateMode 0: 不旋转 1:90度 2: 180度 3: 270度
*@return 
	- @ref ERR_NONE 成功
*@note 
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camSetImageRotateMode(long devIndex,long rotateMode);
/**@brief 设置裁切区域
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [in] left 裁切区域左顶点的X坐标值
*@param [in] top  裁切区域左顶点的Y坐标值
*@param [in] right 裁切区域右底点的X坐标值
*@param [in] bottom 裁切区域右底点的Y坐标值
*@return 
	- @ref ERR_NONE 成功
*@note 裁切区域全置零即取消裁切
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camSetImageCusCropRect(long devIndex,long left,long top,long right,long bottom);
/**@brief 设置图像效果
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [in] type 效果类型：0-无效果，1-文档增强，2色彩增强，3-灰色(Gray)，4-黑白(Black & White)，
5-油画(Painterly)，6-怀旧(Nostalgic)，7-素描(Sketch)，8-边缘照亮(Glowing Edge)，
9-蓝冷(Cold Blue)，10-马赛克(Mosaic)，11-模糊(Blurry)，12-负片(Negative)。13

*@return 
	- @ref ERR_NONE 成功
*@note 可以开启视频之前设置。
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camSetImageAdjust(long devIndex,long type);