CmCapture/CmCaptureHelper.cs

using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Runtime.InteropServices;
using Sample_CamDLL_ImageProcesing_WPF.Models;
using System.Collections.ObjectModel;

namespace CamDLLHelper
{
    public class CamDLL
    {
        public delegate bool FrameReceivedHandler(IntPtr src, int width, int height, int size);

        public delegate bool DeviceChangedHandler(IntPtr type);

        public delegate bool AutoCaptureHandler(int state);

        /// <summary>
        /// 异步指纹回调
        /// </summary>
        /// <returns></returns>
        public delegate bool AsynchronousCallback(IntPtr pBmpBuff, IntPtr pFeature, byte[] BmpBuff);


        /// <summary>
        /// 蜂鸣注册按键回调委托
        /// </summary>
        /// <param name="lData">1为按下，2为抬起</param>
        /// <returns></returns>
        public delegate bool callBackKeyRecept(int lData);
        /// <summary>
        /// 初始化
        /// </summary>
        /// <returns>0-,1-</returns>
        [DllImport("CmCapture.dll", EntryPoint = "camInitCameraLib", CallingConvention = CallingConvention.Cdecl)]
        public extern static int InitializeCamera();
        /// <summary>
        /// 反初始化
        /// </summary>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camUnInitCameraLib", CallingConvention = CallingConvention.Cdecl)]
        public extern static int DisposeCamera();
        /// <summary>
        /// 打开视频
        /// </summary>
        /// <param name="devIndex"></param>
        /// <param name="subtype"></param>
        /// <param name="width"></param>
        /// <param name="height"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camOpenDev", CallingConvention = CallingConvention.Cdecl)]
        public static extern int OpenCamera(int devIndex, int subtype, int width, int height);
        /// <summary>
        /// 关闭视频
        /// </summary>
        /// <param name="devIndex"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camCloseDev", CallingConvention = CallingConvention.Cdecl)]
        public static extern int CloseCamera(int devIndex);
        /// <summary>
        /// 注册回调
        /// </summary>
        /// <param name="index"></param>
        /// <param name="frameReceived"></param>
        [DllImport("CmCapture.dll", EntryPoint = "camRegOutCallBackGetPreviewImage", CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterFrameReceived(int index, FrameReceivedHandler frameReceived);
        /// <summary>
        /// 热插拔
        /// </summary>
        /// <param name="deviceChanged"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camRegOutCallBackDeviceChange", CallingConvention = CallingConvention.Cdecl)]
        public static extern int RegisterDeviceChanged(DeviceChangedHandler deviceChanged);
        /// <summary>
        /// 获取设备个数
        /// </summary>
        /// <param name="count"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camGetDevCount", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetDeviceCount(ref int count);
        /// <summary>
        /// 获取图像设备名
        /// </summary>
        /// <param name="index"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camGetDevName", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr GetDeviceName(int index);
        /// <summary>
        /// 获取设备类型
        /// </summary>
        /// <param name="index"></param>
        /// <param name="type"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camGetDevType", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetDeviceType(int index, ref int type);
        /// <summary>
        /// 获取视频格式个数
        /// </summary>
        /// <param name="index"></param>
        /// <param name="count"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camGetMediaTypeCount", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetDeviceVideoFormatCount(int index, ref int count);
        /// <summary>
        /// 获取视频格式名称
        /// </summary>
        /// <param name="index"></param>
        /// <param name="formatIndex"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camGetMediaTypeName", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        public static extern string GetDeviceVideoFormatName(int index, int formatIndex);
        /// <summary>
        /// 获取分辨率个数
        /// </summary>
        /// <param name="index"></param>
        /// <param name="formatIndex"></param>
        /// <param name="count"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camGetResolutionCount", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetDeviceResolutionCount(int index, int formatIndex, ref int count);
        /// <summary>
        /// 获取指定分辨率
        /// </summary>
        /// <param name="index"></param>
        /// <param name="formatIndex"></param>
        /// <param name="resolutionIndex"></param>
        /// <param name="width"></param>
        /// <param name="height"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camGetResolution", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetDeviceResolution(int index, int formatIndex, int resolutionIndex, ref int width, ref int height);
        /// <summary>
        /// 自动裁切
        /// </summary>
        /// <param name="index"></param>
        /// <param name="cropType"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camSetImageAutoCrop", CallingConvention = CallingConvention.Cdecl)]
        public static extern int AutoCropArea(int index, int cropType);
        /// <summary>
        /// 自动对焦
        /// </summary>
        /// <param name="index"></param>
        /// <param name="focusType"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camAutoFocus", CallingConvention = CallingConvention.Cdecl)]
        public static extern int AutoFocus(int index, int focusType);
        /// <summary>
        /// 拍照
        /// </summary>
        /// <param name="index"></param>
        /// <param name="path"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camCaptureImageFile", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        public static extern int SnapshotCapture(int index, StringBuilder path);
        /// <summary>
        /// 视频格式
        /// </summary>
        /// <param name="index"></param>
        /// <param name="formatIndex"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camSetMediaType", CallingConvention = CallingConvention.Cdecl)]
        public static extern int SetDeviceVideoFormat(int index, int formatIndex);
        /// <summary>
        /// 设置视频分辨率
        /// </summary>
        /// <param name="index"></param>
        /// <param name="width"></param>
        /// <param name="height"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camSetResolution", CallingConvention = CallingConvention.Cdecl)]
        public static extern int SetDeviceResolution(int index, int width, int height);

        /// <summary>
        /// 设置自定义裁切区域
        /// </summary>
        /// <param name="devIndex"></param>
        /// <param name="left"></param>
        /// <param name="top"></param>
        /// <param name="right"></param>
        /// <param name="bottom"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camSetImageCusCropRect", CallingConvention = CallingConvention.Cdecl)]
        public static extern int SetCropRectangle(int devIndex, int left, int top, int right, int bottom);

        /// <summary>
        /// 设置图像增强方式
        /// </summary>
        /// <param name="devIndex"></param>
        /// <param name="type"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camSetImageAdjust", CallingConvention = CallingConvention.Cdecl)]
        public static extern int SetAdjust(int devIndex, int type = 1);
        /// <summary>
        /// 获取设备的VID
        /// </summary>
        /// <param name="devIndex"></param>
        /// <param name="strVid"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camGetDevVid", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetDevVid(int devIndex, StringBuilder strVid);
        /// <summary>
        /// 获取设备PID
        /// </summary>
        /// <param name="devIndex"></param>
        /// <param name="strPid"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camGetDevPid", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetDevPid(int devIndex, StringBuilder strPid);
        /// <summary>
        /// 设置旋转方向
        /// </summary>
        /// <param name="index"></param>
        /// <param name="rotateMode"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camSetImageRotateMode", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        public static extern int RotateCapture(int index, int rotateMode);


